Revert "Text visibility is bad in testimonials section. Need to change the text color. #226 fixed"
This reverts commit f076d16fc32d08091cfb89939a258844f711e953.

--- a/src/pages/home_page/_HomePage.css
+++ b/src/pages/home_page/_HomePage.css
@@ -97,9 +97,8 @@ section {
 
 .testimonialCard:hover {
   transform: translateY(-5px);
-  background-color:black;
+  background-color: #d2d8ff;
   color: #000;
-  
 }
 
 /* Styling for testimonial content */
@@ -107,14 +106,12 @@ section {
   font-style: italic;
   text-align: center;
   margin-top: 16px;
-  color: white;
 }
 
 /* Styling for testimonial names */
 .testimonialName {
   font-weight: bold;
   margin-top: 16px;
-  color: white;
 }
 
 /* Add this media query at the end of your CSS file to adjust styles for mobile screens */
